<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Technologia Incognita</string>
    
    <string name="notify_open">The space is currently open</string>
    <string name="notify_closed">The space is currently closed</string>
    
    <string name="ticker_open">Space opened</string>
    <string name="ticker_closed">Space closed</string>
    
    <string name="main_text">
        This application monitors the current status of the Technologia Incognita hackerspace.\n
        It will automatically monitor the current status of the space and show a notification while it is enabled.
    </string>
    <string name="status">Current TechInc status:</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="unknown">Unknown</string>
    <string name="button_refresh">Refresh</string>
    <string name="monitoring_enabled">Monitoring enabled</string>
    <string name="monitoring_disabled">Monitoring disabled</string>
    <string name="monitoring_unsupported">Monitoring unsupported</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="updating">Updating…</string>
    <string name="menu_settings">Settings</string>
    <string name="quit">Quit</string>
    
    <string name="warning">Warning</string>
    <string name="suppress_label">Suppress closed</string><string name="suppress_summary">Only notify when space opens</string>
    <string name="vibrate_label">Vibrate</string><string name="vibrate_summary">Vibrate device on notification</string>
    <string name="ringtone_label">Notification tone</string><string name="ringtone_summary">Select a sound to play with the notification</string>
    <string name="monitor_label">Monitor for changes</string><string name="monitor_summary">Register with the server to receive push updates</string>
    <string name="boot_label">Run at boot</string><string name="boot_summary">Register to receive updates when the device starts up</string>
    <string name="debug_label">Debug mode</string><string name="debug_summary">Enable debug mode.</string>
    <string name="url_label">Server URL</string><string name="url_summary">Change the server that the device registers with</string>
    <string name="url_desc">For debugging purposes only.\nDo not touch unless you know what you are doing.</string>
    
    <string name="yes">Yes</string><string name="no">No</string>
    <string name="dialog_message">In order to apply this setting, the application has to be restarted.\nShutdown now?</string>
</resources>