<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <CheckBoxPreference android:title="@string/suppress_label" android:summary="@string/suppress_summary" android:key="suppress"/><CheckBoxPreference android:title="@string/vibrate_label" android:summary="@string/vibrate_summary" android:key="vibrate"/>
    <RingtonePreference android:ringtoneType="notification" android:title="@string/ringtone_label" android:showDefault="true" android:summary="@string/ringtone_summary" android:showSilent="true" android:key="ringtone"/>
    <CheckBoxPreference android:key="gcm_enabled" android:title="@string/monitor_label" android:summary="@string/monitor_summary" android:enabled="true" android:defaultValue="true"/>
    <CheckBoxPreference android:key="boot" android:title="@string/boot_label" android:summary="@string/boot_summary" android:enabled="true" android:defaultValue="true"/>
    <CheckBoxPreference android:summary="@string/debug_summary" android:key="debug" android:title="@string/debug_label" /><EditTextPreference android:summary="@string/url_summary" android:title="@string/url_label" android:defaultValue="http://techinc.notefaction.jit.su" android:key="url" android:dialogMessage="@string/url_desc" android:dialogTitle="@string/warning" android:dependency="debug"/>
</PreferenceScreen>